--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-#spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://nas.graenh.com:3307/test?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://nas.graenh.com:3307/test?serverTimezone=Asia/Seoul&createDatabaseIfNotExist=true
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.platform =mysql
+
+spring.datasource.initialization-mode=always
